fixed weird gap

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -42,6 +42,7 @@
       background-color: black;
       float: left;
       justify-content: space-evenly;
+      margin-top: -3.5%;
       }
 
   .backImage {
